// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion. Supports AWS Lambda→Functions, Kubernetes→Container Apps, Cloud Run→Container Apps. WHEN: migrate Lambda to Functions, AWS to Azure, Lambda assessment, convert serverless to Azure, readiness report, from AWS, from GCP, Cloud Run to Container Apps, Kubernetes to Container Apps, Kubernetes to ACA, GKE to Azure, EKS to Container Apps.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "cloud",
    "code",
    "container",
    "conversion",
    "convert",
    "cross-cloud",
    "deploy",
    "from",
    "function",
    "functions",
    "kubernetes",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "report",
    "reports",
    "serverless",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "cloud",
  "code",
  "container",
  "conversion",
  "convert",
  "cross-cloud",
  "deploy",
  "from",
  "function",
  "functions",
  "kubernetes",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "report",
  "reports",
  "serverless",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
